--- a/ReadMe
+++ b/ReadMe
@@ -1,2 +1,2 @@
 Серверная часть проекта: Desktop-приложение для агрегации цен и хранения коллекции монет 
-Представляется из себя нечто похожее на REST сервер
+Представляется из себя REST сервер
